RESOLVED FIXED147682
[GTK] Crash closing a page when a context menu is open
https://bugs.webkit.org/show_bug.cgi?id=147682
Summary [GTK] Crash closing a page when a context menu is open
Carlos Garcia Campos
Reported 2015-08-05 05:40:51 PDT
This was fixed in mac port in r180094, but I don't know which previous revision introduced the regression. It can be reproduced with /webkit2/WebKitWebView/populate-menu but we didn't notice it because the TestContextMenu test is still skipped in the bots :-/ This also affects to 2.8 branch.
Attachments
Patch (3.06 KB, patch)
2015-08-05 05:55 PDT, Carlos Garcia Campos
svillar: review+
Carlos Garcia Campos
Comment 1 2015-08-05 05:55:56 PDT
Sergio Villar Senin
Comment 2 2015-08-06 00:27:49 PDT
Comment on attachment 258274 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=258274&action=review > Source/WebKit2/UIProcess/gtk/WebContextMenuProxyGtk.cpp:196 > + for (auto iter = m_signalHandlers.begin(); iter != m_signalHandlers.end(); ++iter) for (auto handler : m_signalHandlers)
Carlos Garcia Campos
Comment 3 2015-08-06 01:14:41 PDT
Note You need to log in before you can comment on or make changes to this bug.