[GTK] Crash closing a page when a context menu is open https://bugs.webkit.org/show_bug.cgi?id=147682

Reviewed by Sergio Villar Senin.

Implement WebContextMenuProxy::cancelTracking() to clear the
internal menu when the web page is closed.

* UIProcess/gtk/WebContextMenuProxyGtk.cpp:
(WebKit::WebContextMenuProxyGtk::cancelTracking):
(WebKit::WebContextMenuProxyGtk::~WebContextMenuProxyGtk): Deleted.
* UIProcess/gtk/WebContextMenuProxyGtk.h:

Canonical link: https://commits.webkit.org/165811@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188031 268f45cc-cd09-0410-ab3c-d52691b4dbfc